--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -41,7 +41,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
+            text-align: justify;
             margin-top: 20px; /* Tambahkan margin di atas bio-container */
         }
 
@@ -54,7 +54,7 @@
         }
 
         h1, h3 {
-            color: #333;
+            color: #000000;
         }
 
         p {
@@ -68,7 +68,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <a href="#home">Beranda</a>
-        <a href="#portfolio">Portofolio</a>
+        <a href="#portfolio"onclick="showPage('protofolio')">Portofolio</a>
         <a href="#contact" onclick="showPage('kontak')">Kontak</a>
         <!-- Anda dapat menambahkan link lain sesuai kebutuhan -->
     </div>
@@ -83,32 +83,17 @@
     <div class="bio-container">
         <img src="asa1.jpg" alt="Foto Profil">
         <h1>Aldi Riyadi Oktavian</h1>
-        <h3>Mahasiswa Jurusan Akuntansi</h3>
+        <h3>Bruhh, Whatever</h3>
         <p>
-            Salam sejahtera! Saya adalah [Nama Anda], seorang mahasiswa jurusan Akuntansi angkatan 2022 di [Nama Universitas]. Saya lahir pada [Tanggal Kelahiran] di [Tempat Kelahiran], dan sejak saat itu, saya telah memulai perjalanan hidup yang penuh semangat dan dedikasi.
-
-        pendidikan
-Saat ini, saya tengah menempuh pendidikan di program studi Akuntansi di [Nama Universitas]. Keputusan untuk memilih jurusan ini didasari oleh minat saya yang mendalam terhadap dunia keuangan dan akuntansi. Saya percaya bahwa dengan pemahaman yang kuat tentang konsep akuntansi, saya dapat memberikan kontribusi yang berarti dalam dunia bisnis.
-
-### Aktivitas Mahasiswa
-Sebagai mahasiswa Akuntansi, saya aktif dalam berbagai kegiatan mahasiswa. Saya menjadi bagian dari [Nama Organisasi Mahasiswa] dan terlibat dalam kegiatan yang berkaitan dengan pengembangan soft skill, networking, dan pemahaman mendalam tentang dunia akuntansi di luar perkuliahan.
-
-### Riwayat Hidup
+            Salam sejahtera! Saya adalah Aldi Riyadi Oktavian, seorang mahasiswa angkatan 2022. Saya lahir pada 05 Oktober 2004 di Garut, dan sejak saat itu, saya telah memulai perjalanan hidup yang penuh semangat dan dedikasi.
+Saat ini, saya tengah menempuh pendidikan di program studi Akuntansi di Universitas Siliwangi. Keputusan untuk memilih jurusan ini didasari oleh minat saya yang mendalam terhadap dunia keuangan dan akuntansi. Saya percaya bahwa dengan pemahaman yang kuat tentang konsep akuntansi, saya dapat memberikan kontribusi yang berarti dalam dunia bisnis.
+Sebagai mahasiswa Akuntansi, saya aktif dalam berbagai kegiatan mahasiswa. Saya menjadi bagian dari KNS dan terlibat dalam kegiatan yang berkaitan dengan pengembangan soft skill, networking, dan pemahaman mendalam tentang dunia akuntansi di luar perkuliahan.
 Sejak kecil, saya sudah menunjukkan ketertarikan dalam bidang matematika dan analisis. Kecenderungan ini membawa saya untuk memilih jurusan Akuntansi sebagai langkah awal menuju karier yang saya impikan. Selama sekolah menengah, saya aktif dalam kegiatan ekstrakurikuler dan meraih prestasi baik dalam bidang akademis maupun non-akademis.
-
-### Passion dan Visi
 Saya memiliki passion dalam menggali potensi diri dan terus belajar. Saya yakin bahwa pendidikan adalah kunci untuk membuka pintu kesuksesan, dan saya berkomitmen untuk terus mengasah keterampilan dan pengetahuan saya di bidang akuntansi. Visi saya adalah menjadi seorang profesional akuntan yang berintegritas, mampu memberikan nilai tambah dalam setiap tindakan, dan berkontribusi positif bagi perusahaan dan masyarakat.
-
-### Kesimpulan
 Saya percaya bahwa perjalanan saya sebagai mahasiswa Akuntansi angkatan 2022 akan membentuk fondasi kuat untuk karier masa depan saya. Dengan semangat belajar dan dedikasi penuh, saya optimis bisa mencapai tujuan-tujuan saya dalam dunia akuntansi.
-
 Terima kasih atas perhatiannya, dan saya sangat antusias untuk terus mengembangkan diri dan memberikan yang terbaik di setiap langkah perjalanan saya.
-
 Semoga kita bisa bertemu dan berkolaborasi di masa depan!
 
----
-
-Pastikan untuk menyesuaikan informasi pribadi dan pengalaman Anda agar sesuai dengan kenyataan.
         </p>
     </div>
 </body>
